--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -66,6 +66,7 @@
     margin: 0;
     margin-top: 0px;
     padding: 0;
+    /* background-color: red; */
 }
 .Services p {
     width: 570px;
@@ -77,11 +78,14 @@
     width: 600px;
 }
 .rows{
-    display: flex;
-    justify-content: space-between;
+    display: -webkit-flex;
+    justify-content: -webkit-space-between;
     background-color: green;
-    margin-top: 20px;
-    /* padding: 20px; */
+    width: 500px;
+    margin: 0px 10px;
+    /*margin-top: 20px;
+    -webkit-column-width: 100%;
+    -webkit-column-rule-width: 100%; */
 }
 .rows img{
     /* width: 50%; */
@@ -115,6 +119,32 @@
 .h2{
     display: none;
 }
+.Wip{
+    padding: 0px 100px;
+    margin-top: 40px;
+   
+}
+.wipDiv{
+   padding: 31px 60px;
+   border-radius: 45px;
+   margin-top: 50px;
+   width: 100%;
+   height: auto;
+   /* background-color: rgba(243, 243, 243, 1); */
+    /* display: flex;
+    align-items: center;
+    justify-content: space-between; */
+    box-shadow: 0px 10px 0px 0px black;
+}
+.plusIcon{
+    width: fit-content;
+    height: fit-content;
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 3px;
+    background-color: white;
+}
+
 @media screen and (max-width: 992px) {
   .firsthero {
     flex-direction: column;
@@ -185,5 +215,11 @@
 }
 .h2-1{
     display: none;
+}
+.Wip{
+  padding: 0px 20px;
+}
+.wipDiv{
+  /* padding: 0px 0px; */
 }
 }
