--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -144,6 +144,10 @@
     padding: 3px;
     background-color: white;
 }
+.Team{
+    padding: 0px 100px;
+    margin-top: 100px;
+}
 
 @media screen and (max-width: 992px) {
   .firsthero {
