--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -11,26 +11,22 @@
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   margin-top: 0px;
-    position: fixed;
-    top: 0;
-    /* bottom: 0; */
-    width: 100%;
-    /* margin: 0; */
-  
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 .brand {
-  /* background-color: rgba(0, 9, 128, 0.441); */
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0;
 }
-.name{
-    font-weight: light;
-    margin: 0;
+.name {
+  font-weight: light;
+  margin: 0;
 }
 .menu {
-  /* background-color: rgba(255, 214, 29, 0.441); */
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -38,7 +34,6 @@
   margin: 0;
 }
 .menu-items {
-  /* background-color: rgba(50, 255, 153, 0.441); */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -47,7 +42,6 @@
   margin: 0;
 }
 .list-items:first-of-type {
-  /* background-color: red; */
 }
 .list-items {
   margin: 0px 20px;
@@ -66,22 +60,21 @@
   height: 30px;
   margin: 0px 5px 0px 0px;
 }
-.bars{
-    display: none;
+.bars {
+  display: none;
 }
-@media screen and (max-width: 576px){
-    .header{
-        padding: 20px 20px;
-        position: fixed;
-        top: 0;
-        /* bottom: 0; */
-        width: 100%;
-        margin: 0;
-    }
-    .menu{
-        display: none;
-    }
-    .bars{
-        display: flex;
-    }
+@media screen and (max-width: 576px) {
+  .header {
+    padding: 20px 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin: 0;
+  }
+  .menu {
+    display: none;
+  }
+  .bars {
+    display: flex;
+  }
 }
