--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: red;
+  color: rgb(242, 255, 0);
 }
 .error-div{
   height: 100vh;
